# Iris-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ClearSolution.bat  ClearTemporaryFiles.bat  GenerateReflection.bat  GenerateSolution.bat  README.md  UpdateSubmodules.bat
IrisEditor/: CMakeLists.txt
IrisEditor/Assets/ImGui/: imgui.ini
IrisEditor/Code/Include/Core/: EditorLayer.h  IrisEditor.h
IrisEditor/Code/Include/Core/Input/: IMGUIInput.h
IrisEditor/Code/Include/UISubWindow/: CameraComponentSubWindow.h  GuizmoToolsSubWindow.h  IUISubWindow.h  ImGuiSubWindow.h  LightComponentSubWindow.h  MaterialSubWindow.h  ModelRendererComponentSubWindow.h  PhysicsComponentSubWindow.h  ScriptComponentSubWindow.h  TextureFileSubWindow.h  TransformSubWindow.h
IrisEditor/Code/Include/UITools/: FileExtension.h  ImGuiFontManager.h  ImGuiWidgets.h  ImGuiWrapper.h
IrisEditor/Code/Include/UIWindow/: ConsoleWindow.h  ContentBrowserWindow.h  GameViewportWindow.h  HierarchyWindow.h  IUIWindow.h  ImGuiWindow.h  InspectorWindow.h  SceneViewportWindow.h
IrisEditor/Code/Source/: main.cpp
IrisEditor/Code/Source/Core/: EditorLayer.cpp  IrisEditor.cpp
IrisEditor/Code/Source/Core/Input/: IMGUIInput.cpp
IrisEditor/Code/Source/UISubWindow/: CameraComponentSubWindow.cpp  GuizmoToolsSubWindow.cpp  LightComponentSubWindow.cpp  MaterialSubWindow.cpp  ModelRendererComponentSubWindow.cpp  PhysicsComponentSubWindow.cpp  ScriptComponentSubWindow.cpp  TextureFileSubWindow.cpp  TransformSubWindow.cpp
IrisEditor/Code/Source/UITools/: ImGuiFontManager.cpp  ImGuiWidgets.cpp  ImGuiWrapper.cpp
IrisEditor/Code/Source/UIWindow/: ConsoleWindow.cpp  ContentBrowserWindow.cpp  GameViewportWindow.cpp  HierarchyWindow.cpp  ImGuiWindow.cpp  InspectorWindow.cpp  SceneViewportWindow.cpp
IrisEngine/: CMakeLists.txt
IrisEngine/Assets/Meshes/: Tree.gltf  logo.fbx  test.fbx
IrisEngine/Assets/Meshes/Default/: SimpleCapsule.mtl
IrisEngine/Assets/Script/: Template.cs
IrisEngine/Assets/Script/CSharpBridge/: ScriptFactory.cs
IrisEngine/Assets/Script/CSharpBridge/Components/: Camera.cs  IComponent.cs  Light.cs  RigidBody.cs  Script.cs  Transform.cs
IrisEngine/Assets/Script/CSharpBridge/IrisEngine_Math_CS/: Tools.cs  Vector3.cs
IrisEngine/Assets/Script/CSharpBridge/SceneElement/: SceneManager.cs
IrisEngine/Assets/Shaders/: FS_GridShader.frag  VS_GridShader.vert
IrisEngine/Assets/Shaders/Common/: CameraData.glsl  ImageBasedLighting.glsl  LightData.glsl  MaterialData.glsl  MeshData.glsl  PBRComputation.glsl  ShadowComputation.glsl
IrisEngine/Assets/Shaders/Deferred/: FS_DeferredPBR.frag  FS_GBuffer.frag  VS_DeferredPBR.vert  VS_GBuffer.vert
IrisEngine/Assets/Shaders/Forward/: FS_ForwardPBR.frag  VS_ForwardPBR.vert
IrisEngine/Assets/Shaders/IBL/: FS_IBLIrradianceMapping.frag  FS_IBLLookUpTexture.frag  FS_IBLPrefilter.frag  VS_IBLLookUpTexture.vert
IrisEngine/Assets/Shaders/ShadowMapping/: FS_PointShadowMap.frag  GS_PointShadowMap.geo  VS_DirectionalShadowMap.vert  VS_PointShadowMap.vert
IrisEngine/Assets/Shaders/Skybox/: FS_PanoramicToCube.frag  FS_Skybox.frag  GS_PanoramicToCube.geo  VS_PanoramicToCube.vert  VS_Skybox.vert
IrisEngine/Assets/Shaders/Unlit/: FS_UnlitShader.frag  VS_UnlitShader.vert
IrisEngine/Assets/Shaders/Wireframe/: FS_WireframeShader.frag  VS_WireframeShader.vert
IrisEngine/Code/Include/CSharpScripting/: ComponentSideCStyleFunc.h  SceneSideCStyleFunc.h  ScriptManager.h
IrisEngine/Code/Include/Core/: Application.h  GLFWWindow.h  IWindow.h  Time.h
IrisEngine/Code/Include/Core/Graphics/: ContextInitializer.h
IrisEngine/Code/Include/Core/Input/: GLFWInput.h  IInput.h  InputAction.h  InputEnum.h  InputManager.h  InputMappingContext.h
IrisEngine/Code/Include/Core/MultiThread/: ThreadManager.h
IrisEngine/Code/Include/Core/Physics/: ActivationListener.h  ContactListener.h  PhysicsLayer.h
IrisEngine/Code/Include/Core/Tools/: Assert.h  FilePath.h  Log.h  Macros.h  Profiler.h  Reflection.h
IrisEngine/Code/Include/Loader/: ILoader.h  IrisLoader.h  IrisShaderTools.h
IrisEngine/Code/Include/Loader/MeshLoader/: AssimpLoader.h  IMeshLoader.h
IrisEngine/Code/Include/Loader/ShaderCompiler/: IShaderCompiler.h  ShadercIncluder.h  ShadercShaderCompiler.h
IrisEngine/Code/Include/Loader/ShaderLoader/: IShaderLoader.h  IrisShaderLoader.h
IrisEngine/Code/Include/Loader/ShaderReflection/: IShaderInspector.h  SPIRVShaderInspector.h
IrisEngine/Code/Include/Loader/TextureLoader/: ITextureLoader.h  StbImageLoader.h
IrisEngine/Code/Include/Reflection/: EnumReflection.h  TestReflection.h  reflection_generation.py
IrisEngine/Code/Include/Resources/: IResource.h  IResourceContainer.h  IrisResource.h  Material.h  Mesh.h  Metadata.h  Metadata.inl  MetadataManager.h  ResourceManager.h  Script.h  Shader.h  Texture.h
IrisEngine/Code/Include/Resources/MetadataNHImpl/: NHMetadata.h
IrisEngine/Code/Include/SECS/: IrisObject.h  IrisObject.inl  Scene.h  Scene.inl  SceneManager.h
IrisEngine/Code/Include/SECS/Components/: CameraComponent.h  Collider.h  ComponentID.h  ComponentTable.h  ComponentTable.inl  IComponent.h  IComponent.inl  LightComponent.h  ModelRenderer.h  PlayerInput.h  RigidBody.h  ScriptComponent.h  (+2 more)
IrisEngine/Code/Source/CSharpScripting/: CStyleFunc.cpp  ScriptManager.cpp
IrisEngine/Code/Source/Core/: Application.cpp  GLFWWindow.cpp  Time.cpp
IrisEngine/Code/Source/Loader/: IrisLoader.cpp  IrisShaderTools.cpp
IrisEngine/Code/Source/Resources/: Material.cpp  Mesh.cpp  MetadataManager.cpp  ResourceManager.cpp  Shader.cpp  Texture.cpp
IrisEngine/Code/Source/SECS/: IrisObject.cpp  Scene.cpp  SceneManager.cpp
IrisEngine/Resources/: RCa05140  resource.rc
IrisEngine/UnitTests/: CMakeLists.txt
IrisEngine/UnitTests/UT_Application/: CMakeLists.txt
IrisEngine/UnitTests/UT_SECS/: CMakeLists.txt
IrisEngine/UnitTests/UT_Window/: CMakeLists.txt
IrisGame/: CMakeLists.txt  main.cpp
IrisGame/GameFiles/Game/: ButtonRotate.cs  BzztBzzt.cs  DRAGONNN.fbx  Door.cs  SM_Trident.fbx
IrisGame/GameFiles/Game/CSharpBridge/: InfoReader.cs  ShapeParam.cs
(+133 files in other folders)
